--- a/templates/index.html
+++ b/templates/index.html
@@ -253,6 +253,7 @@
     var ifa = document.getElementsByClassName('ifa')[0];
     var btn = document.getElementsByClassName('btn')[0];
     var pay = document.getElementsByClassName('pay')[0];
+    var pay2 = document.getElementsByClassName('pay2')[0];
     gobtn.addEventListener('click', function () {
         navf.className = "nav0";
         navs.className = "nav2";
@@ -280,6 +281,10 @@
         }, 5000);
     })
     pay.addEventListener('click', function () {
+        location.href = './settlement.html';
+        //这个路径你改成后端
+    })
+    pay2.addEventListener('click', function () {
         location.href = './settlement.html';
         //这个路径你改成后端
     })
