--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
     <div class="cover">
 
     </div>
+    <!-- src  你改一下 -->
     <iframe src="../templates/wait.html" frameborder="0" name="hello" scrolling="no" class="ifa"></iframe>
     <div class="jingbao">
         <h1>购买须知</h1>
