--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="chazhao">
-            <button class="btn" onclick="reqfirst()">
+            <button class="btn" >
                 <h2>&nbsp搜索</h2>
             </button>
         </div>
@@ -217,11 +217,10 @@
         setTimeout(function () {
             cover.className = 'cover';
             ifa.className = 'ifa';
+            reqfirst();
             //计算时间
-        }, 3000);
+        }, 2500);
     })
-
-
 </script>
 <script src="../static/s-js/city.js"></script>
 <script src="../static/s-js/index.js"></script>
