--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
                 rel="nofollow"><img src="../static/s-other/xin.png" alt=""></a>
             <a href="https://im-synthesize.ctrip.com/complaints/rights/AppealCreate" class="honour11"
                 title="消费维权联络点" target="_blank" rel="nofollow"><img src="../static/s-other/jubao.png" alt=""></a>
-            <a class="honour100" title="适老化及无障碍标识" rel="nofollow"><img src="../static/s-other/wang.png" alt=""></a>
+            <a href="http://www.huilan.com/zkhl/fa/ai+zw/zxkfwza/" class="honour100" title="适老化及无障碍标识" rel="nofollow"><img src="../static/s-other/wang.png" alt=""></a>
         </div>
         </div>
     </div>
@@ -219,7 +219,7 @@
             ifa.className = 'ifa';
             reqfirst();
             //计算时间
-        }, 5000);
+        }, 2000);
     })
 </script>
 <script src="../static/s-js/city.js"></script>
